# rest_api_babenko

./: .gitignore  DZ12.rar  READMI.md  main.py  pyproject.toml  readme.md  requirements.txt
front-end/: index.html  script.js
migrations/: README
migrations/versions/: 1e3801ec822c_init.py  47673d07f7ed_add_verify_for_user.py  4e0bf12625ee_add_user_role.py  748b9c785ebd_init.py  76df74860cc3_init.py  d02209c2073f_add_user.py
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  roles.py
src/templates/: contacts.html  index.html
tests/: test_e2e_auth.py  test_e2e_contacts.py  test_unit_repository_todo.py
