[tool.poetry]
name = "rest_api_babenko"
version = "0.1.0"
description = ""
authors = ["bobantonbob <130400459+bobantonbob@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
alembic = "^1.13.1"
sqlalchemy = "^2.0.28"
asyncpq = "^0.44"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
asyncpg = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
python-dateutil = "^2.9.0.post0"
psycopg2-binary = "^2.9.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.9"
passlib = "^1.7.4"
bcrypt="3.2.2"
libgravatar = "^1.0.4"
fastapi-mail = "^1.4.1"
python-dotenv = "^1.0.1"
fastapi-limiter = "^0.1.6"
redis = "5.0.0"
jinja2 = "^3.1.3"
cloudinary = "^1.39.1"
pytest = "^8.1.1"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"


[tool.poetry.group.test.dependencies]
aiosqlite = "^0.20.0"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = [
    "tests", ]
pythonpath = "."
filterwarnings = "ignore::DeprecationWarning"